--- a/.github/workflows/push_docker.yml
+++ b/.github/workflows/push_docker.yml
@@ -30,7 +30,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: Sarisha Das/dsci522-dockerfile-practice
+          images: rishadaz/dsci522-dockerfile-practice
           tags: |
             type=raw, value={{sha}},enable=${{github.ref_type != 'tag' }}
             type=raw, value=latest
